<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/titulo_preferencias"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/colorFondo" />


    <RadioGroup
        android:id="@+id/colorRadioButtonGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButtonRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/red"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radioButtonAmber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/amber"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radioButtonBlue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radioButtonPurple"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/purple"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radioButtonGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/green"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radioButtonPink"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/pink"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radioButtonGrey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/grey"
            android:onClick="onRadioButtonClicked" />

        <RadioButton
            android:id="@+id/radioButtonWhite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="onRadioButtonClicked" />


    </RadioGroup>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnGuardar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/guardar" />
    </LinearLayout>


</LinearLayout>